welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.code
def parotTrouble(talking:Boolean, hour:Int):Boolean = {
	if (hour<7h && hour>20h) {return 'true'}else{return 'false'}
}
